Bug 956690 - Ensure we descend into the root scroll frame if there is a displayport set. r=tn a=lsblakk